# NH-Fair

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/celeba/: preprocess.py
data/facet/: preprocess.py
data/fairface/: preprocess.py
data/fitz/: preprocess.py
data/ham/: preprocess.py
data/manifests/: celeba.example.yaml  facet.example.yaml  fairface.example.yaml  fitz.example.yaml  ham.example.yaml  utk.example.yaml  waterbirds.example.yaml
data/utk/: preprocess.py
data/waterbirds/: preprocess.py
scripts/: demo_lvlm_methods.sh  demo_train_methods.sh  launch_llm_gateway_llama.sh  launch_llm_gateway_qwen.sh  start_sweep.sh  start_train.sh  start_zeroshot.sh
src/release_benchmark/: __init__.py  model.py  paths.py
src/release_benchmark/cli/: __init__.py  sweep.py  train.py  zeroshot.py
src/release_benchmark/configs/datasets/: all.yaml
src/release_benchmark/configs/sweep/: bm.yaml  clip_fairer.yaml  clip_sfid.yaml  clip_zeroshot.yaml  decoupled.yaml  dfr.yaml  erm.yaml  fis.yaml  fscl.yaml  gapreg.yaml  groupdro.yaml  laftr.yaml  mcdp.yaml  mixup.yaml  oxonfair_method.yaml  randaug.yaml  resample.yaml
src/release_benchmark/datasets/: celeba_dataset.py  common.py  dataset.py  facet_dataset.py  fairface_dataset.py  fitz17k_dataset.py  ham10000_dataset.py  randaugment.py  transforms.py  utk_dataset.py  waterbirds_dataset.py
src/release_benchmark/methods/: audit.py  registry.py
src/release_benchmark/methods/cv/: bm.py  decoupled.py  dfr.py  erm.py  fis.py  fscl.py  gapreg.py  groupdro.py  laftr.py  mcdp.py  mixup.py  oxonfair_method.py  randaug.py
src/release_benchmark/methods/lib/kernels/: __init__.py  gaussian.py  linear.py
src/release_benchmark/methods/lvlm/: backend_config.py  gateway.py  gemma.py  llama.py  llava_next.py  llm_utils.py  qwen.py  zeroshot_common.py
src/release_benchmark/methods/vlm/: blip2.py  clip.py  clip_fairer.py  clip_sfid.py  vlm_utils.py
src/release_benchmark/metrics/: evaluation.py  fairness_metrics.py
src/release_benchmark/utils/: common.py
